tests/test2/fail/fail-mismatchedAssign.m2
int main(){
	String a;
	a = 2;
	return 0;
}